# poetry-docker-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  pyproject.toml  sitemap.xml
.github/: dependabot.yml  labeler.yml  pr-title-checker-config.json  release-drafter.yml
.github/workflows/: pr-manager.yml  pr.yml  tester.yml
changelog/: index.html
docs/: mkdocs.yml
docs/docs/: changelog.md  index.md  release_notes.md
docs/docs/release_notes/: 0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.5.4.md
docs/release_notes/: 0.5.0.md
docs/templates/: changelog.j2  release_notes.j2
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
mkdocs/docs/release_notes/: 0.4.0.md  0.5.0.md  0.5.1.md  0.5.4.md
poetry_docker_plugin/: __init__.py  docker_builder.py  plugin.py
release_notes/: index.html
release_notes/0.4.0/: index.html
release_notes/0.5.0/: index.html
release_notes/0.5.1/: index.html
release_notes/0.5.2/: index.html
search/: search_index.json
tests/: conftest.py  test_docker_builder.py
